--- a/PhotosExpressMVP/PhotosExpressMVP/appsettings.json
+++ b/PhotosExpressMVP/PhotosExpressMVP/appsettings.json
@@ -5,14 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Default": "Data Source=192.168.29.14\\PROD;Initial Catalog=PhotosExpressMVP;User ID=sa;Password=Perseverance!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  },
-  "HelloAuthentication": {
-    "ClientId": "ddacc19b-4e25-49a1-962b-77c829cf961a",
-    "ClientSecret": "v_rRmUawBvbyFNwvt73x2",
-    "RedirectURI": "https://localhost:7082/home" // Dev URI
-    //"RedirectURI": "https://stag.portal.qcsdirect.com/home" // Prod URI
-  }
+  "AllowedHosts": "*"
 }
